--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,96 @@
 @import './common';
 @import './example';
+
+body {
+    position: relative;
+    padding-top: 55px;
+}
+.container {
+    max-width: 1200px;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 0;
+}
+.photo-card {
+    flex-basis: calc((100% - 30px) / 4);
+    border: solid 1px rgb(200, 198, 198);
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+    color: inherit;
+}
+.photo-card > img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    display: block;
+}
+
+.load-more {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(76, 131, 233);
+    color: white;
+    border-radius: 4px;
+    border: none;
+    padding: 8px 14px;
+    &:hover, &:focus {
+        background-color: rgb(68, 126, 235);
+    }
+}
+.search {
+    background-color: rgb(210, 208, 208);
+    border-radius: 4px;
+    display: block;
+    border: none;
+    height: 30px;
+    &:hover, &:focus {
+        background-color: rgb(195, 192, 192);
+    }
+}
+.search-form {
+    width: 100%;
+    position:fixed;
+    top: 0;
+    background-color: cornflowerblue;
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+input {
+    height: 30px;
+    display: block;
+    width: 200px;
+    padding: 4px 8px;
+    margin-right: 5px;
+    border-radius: 4px;
+    border: none;
+}
+
+.info {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    background-color: rgb(243, 240, 240);
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    
+}
+.info-item {
+    text-align: center;
+}
+.photo-link {
+    width: 100%;
+}
